carousel section updated

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "env": "^0.0.2",
     "framer-motion": "latest",
     "geist": "^1.4.2",
     "lucide-react": "^0.540.0",
