--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "geist": "^1.4.2",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
+    "next-intl": "^4.3.5",
     "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "react": "^19",
